--- a/notebooks/solutions/09-Ex-Build-A-Program-Solution.ipynb
+++ b/notebooks/solutions/09-Ex-Build-A-Program-Solution.ipynb
@@ -4,44 +4,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Solution: build a simple program (1 h)"
+    "# Solution: Build a simple program"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By doing this exercise you will apply Python basics that we learned today: loops, lists, functions, strings. In addition, you will try to write data to a text file."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Synopsis \n",
+    "Through this exercise you will bring together a few Python basics that we've learned so far, including loops, lists, functions, and strings. \n",
     "\n",
-    "* Use your calc_co2e function from the previous lesson \n",
-    "* Create data of flight distance, and radiative forcing within some range\n",
-    "* Functionalise the equation $CO_2$ equivalent emissions\n",
-    "* In a loop calculate the co2e with distance and radiative forcing as inputs\n",
+    "In addition, you will try to write data output to a text file."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Summary \n",
+    "\n",
+    "* Using your calc_co2e function from the previous lesson, create data of flight distance, and radiative forcing within some range.\n",
+    "    * Functionalise the equation for $CO_2$ equivalent emissions (`co2e`)\n",
+    "* In a loop, calculate the `co2e` with distance and radiative forcing as inputs\n",
     "* Open a new text file for writing\n",
     "* Loop over the function output and write the data to the file\n",
-    "* **Hint:** use string formatting to specify number of decimal places"
+    "    * **Hint:** use string formatting to specify number of decimal places"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**1. Create data of within the following range**"
+    "### Step 1. Create a list of flight distances"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* distance: 200-19000 km, with increments of 400 km\n",
-    "* Include the effect of return flights"
+    "We want to calculate the emissions for a range of flights. \n",
+    "\n",
+    "Create a list that contains the following values: \n",
+    "\n",
+    "* distance: 200-19000 km, with increments of 400 km\n"
    ]
   },
   {
@@ -50,7 +54,7 @@
    "source": [
     "**Hint:** use `range()` function and wrap it in a `list()` function.\n",
     "\n",
-    "If you want to create lists of arbitrary values (e.g. non-integer), use `my_list = [ ]` notation."
+    "If you instead want to create lists of arbitrary values (e.g. non-integer), use `my_list = [ ]` notation."
    ]
   },
   {
@@ -67,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Print out the `distance` variable to check yourself."
+    "Print out the `distance` variable to check it contains what you expected?"
    ]
   },
   {
@@ -83,19 +87,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**2. Create a function to calculate the $CO_2 equiv$ emissions**"
+    "### Step 2. Create a function to calculate the $CO_2^{equiv}$ emissions\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The input and output of the function is explained in the docstring.\n",
-    "The formula is simply:\n",
+    "This equation and function was introduced in **Notebook 8 - Defining Functions**. \n",
+    "\n",
+    "The input and output of the function is explained in the docstring. As a reminder, the formula to use is:\n",
     "\n",
     "$flight CO_2^{equiv} = dist \\times CO_2^{equiv}/km$\n",
     "\n",
-    "Both first class and return tickets double the emissions. The radiative transfer effect (default=2.0) is already included in the factors below but you can add the option for different value."
+    "Where the $CO_2^{equiv}/km$ (or emission factor) is dependent on the distance of the flight (i.e., short haul vs long haul). Both first class and return tickets also double the emissions. The radiative transfer effect (default=2.0) is already included in the function below but you can add the option for different value.\n",
+    "\n",
+    "Here, we can just copy the function produced during the previous lesson. However, if you fancy a challenge, you can always recreate it again..."
    ]
   },
   {
@@ -157,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**3. In a loop, calculate the co2 emissions with distance as input**"
+    "### Step 3. In a loop, calculate the co2 emissions with distance as input"
    ]
   },
   {
@@ -166,7 +174,9 @@
    "source": [
     "* First, create an empty list `co2e` for values\n",
     "* Then, write a loop\n",
-    "* Every iteration: after $co_2 equiv$ is computed, append it to the `co2e` list"
+    "* Every iteration:\n",
+    "    * Calculate the $CO_2^{equiv}$\n",
+    "    * Append the result to the `co2e` list"
    ]
   },
   {
@@ -176,8 +186,13 @@
    "outputs": [],
    "source": [
     "co2e = []\n",
-    "for dist in distances:\n",
-    "    co2e.append( calc_co2e(dist, returnf=True) )"
+    "for dist in distances: \n",
+    "    flight_co2 = calc_co2e(dist, returnf=True)\n",
+    "    co2e = co2e + [flight_co2]\n",
+    "\n",
+    "# or... \n",
+    "#for dist in distances:\n",
+    "#    co2e.append( calc_co2e(dist, returnf=True) )"
    ]
   },
   {
@@ -200,14 +215,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** 4. Open a new text file for writing **"
+    "### Step 4. Write your results to a new text file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, you need to open a file. Explore the built-in function `open()`:"
+    "First, you need to open a file. Explore the built-in function `open()`:"
    ]
   },
   {
@@ -223,7 +238,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The recommended way of writing/reading files is using the context statement `with`. This makes sure that the whole block is excuted withiut interruption, which includes closing the file.\n",
+    "The recommended way of writing/reading files using the built-in python functionality is using the context statement `with`. This makes sure that the whole block is excuted without interruption, and closes the file once complete.\n",
     "\n",
     "```python\n",
     "# example\n",
@@ -236,7 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Some commonly used I/O modes:\n",
+    "You can open files using different I/O modes, e.g.:\n",
     "* `mode='w'` means that we opened file for *writing*. **This mode overwrites any existing data.**\n",
     "* `mode='r'` - open a file for *reading*\n",
     "* `mode='a'` - open a file for *appending* data\n",
@@ -248,20 +263,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**5. Loop over the function output and write the data to the file**"
+    "#### Using this, we can now loop over the function output and write data the new file"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* *Open a file named `co2e_emissions_from_flight.txt` for **writing**\n",
-    "* Use `with` statement\n",
-    "* Inside the `with` code block, write a loop to iterate through the `heat_flux` values and write each of them on a new line\n",
-    "* Instead of `read()` as in the example above, use `write()` method\n",
-    "* **Note:** `write()` method needs **string** type input\n",
-    "* You can convert numeric values to **string** type using `str()` function or, even better, [`f-strings`](06-Built-in-Scalar-Types.ipynb#String-formatting)\n",
-    "* Add \"\\n\" character to the string to indicate a line break"
+    "* Open a file named `co2e_emissions_from_flight.txt` for **writing**\n",
+    "    * Use `with` statement\n",
+    "* Inside the `with` code block, write a loop to iterate through the `co2e` values and write each of them on a new line\n",
+    "    * Instead of `read()` as in the example above, use `write()` method\n",
+    "    * **Note:** The `write()` method needs **string** type input\n",
+    "        * You can convert numeric values to **string** type using `str()` function or, even better, [`f-strings`](05-Built-in-Scalar-Types.ipynb#String-formatting)\n",
+    "    * **Hint:** Add \"\\n\" character to the string to indicate a line break"
    ]
   },
   {
@@ -272,7 +287,7 @@
    "source": [
     "with open('co2e_emissions_from_flight.txt', 'w') as f:\n",
     "    for co2 in co2e:\n",
-    "        f.write( f'{co2:3.1f}\\n' )"
+    "        f.write( f'{co2:.1f}\\n' )"
    ]
   },
   {
@@ -306,9 +321,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -320,7 +335,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
