Correct solution and minor redrafting

--- a/notebooks/10-Errors-and-exceptions.ipynb
+++ b/notebooks/10-Errors-and-exceptions.ipynb
@@ -20,7 +20,7 @@
     "- **Runtime errors:** \n",
     "  - When your valid code fails to execute, perhaps due to invalid user input (sometimes easy to fix, e.g., when you've read the wrong input data)\n",
     "- **Semantic errors:** \n",
-    "  - Code executes without a problem, but the result is not what you expect (as python doesn't know what you expected, errors can be very difficult to track-down and fix)\n"
+    "  - Code executes without a problem, but the result is not what you expected, or should have received. As python doesn't know what you expected, these errors can be very difficult to track-down and fix.\n"
    ]
   },
   {
@@ -63,8 +63,9 @@
    "id": "304e2d57-48fa-4875-a2bb-2420aadd7b3f",
    "metadata": {},
    "source": [
-    "You might want your program to take an alternate course of action if it can't \n",
-    "find a file,  instead of stopping with an error."
+    "Instead of failing with an error, you might want your program to take an alternate course of action if it can't find the file. \n",
+    "\n",
+    "For example, trying a different file, or providing the user with more guidance on how to proceed? "
    ]
   },
   {
@@ -93,7 +94,7 @@
    "id": "76d28f82-8750-4e8d-bfcb-05061f164649",
    "metadata": {},
    "source": [
-    "We use `FileNotFoundError` above to specify the type of exception that we expect might happen, if the file does not exist. \n",
+    "We use `FileNotFoundError` above to specify the type of exception that we expect might happen, if the file does not exist. This means that other unexpected errors will still cause the program to fail. \n",
     "\n",
     "Descriptions of the various exception types that can be used for error handling can be found [here](https://docs.python.org/3/library/exceptions.html).  \n",
     "\n",
@@ -115,7 +116,7 @@
    "id": "addd73f6-658a-403b-a7cb-bd43b71e63c6",
    "metadata": {},
    "source": [
-    "The python documentation shows an example of how to deal with a ValueError for user input [here](https://docs.python.org/3/tutorial/errors.html#handling-exceptions). To interrup the while loop, go to *Kernel* menu and click *Interrupt Kernel*.                                                                   "
+    "The python documentation shows an example of how to deal with a ValueError for user input [here](https://docs.python.org/3/tutorial/errors.html#handling-exceptions). \n"
    ]
   },
   {
@@ -141,7 +142,9 @@
     "Combine this with the example above, to ask the user for the filename, and: \n",
     "\n",
     " * Check that the filename has more than 6 characters,\n",
-    " * If the file specified doesn't exist, catch the error and \"do something else\".\n"
+    " * If the file specified doesn't exist, catch the error and \"do something else\".\n",
+    "\n",
+    "**Note:** To interrupt a while loop, go to *Kernel* menu and click *Interrupt Kernel*.                                                                   "
    ]
   },
   {
@@ -153,10 +156,10 @@
    "source": [
     "while True:\n",
     "    # Uncoment this line before running \n",
-    "    file = input(\"Please enter a filename: \")\n",
+    "    # file = input(\"Please enter a filename: \")\n",
     "    # check filename length\n",
     "    \n",
-    "    # Try to open file\n"
+    "    # Try to open file \n"
    ]
   },
   {
@@ -172,7 +175,7 @@
     "*Tips: \n",
     "This exercise uses a combination of conditions that we've seen throughout this session.* \n",
     "\n",
-    "*If using `while True`, make sure you include `break` statements to avoid getting stuck in infinite loops!*"
+    "***If using `while True`, make sure you include `break` statements to avoid getting stuck in infinite loops!***"
    ]
   },
   {
@@ -191,6 +194,18 @@
    "id": "ba3b2292-201c-42c4-abf9-ddff276cde9b",
    "metadata": {},
    "source": [
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
+    "<br>\n",
     "<br>\n",
     "<br>\n",
     "<br>\n",
@@ -231,7 +246,7 @@
     "            # Read data here ...\n",
     "            break\n",
     "    \n",
-    "    except OSError as err:\n",
+    "    except FileNotFoundError as err:\n",
     "        print(err)\n",
     "        print('\\n WARNING: Cannot read file so will use default values')\n",
     "        # Do alternate action here ...\n",
@@ -270,7 +285,7 @@
     "            # Read data here ...\n",
     "            break\n",
     "    \n",
-    "    except OSError as err:\n",
+    "    except FileNotFoundError as err:\n",
     "        print(err)\n",
     "        print('\\n WARNING: Cannot read file so will use default values')\n",
     "        # Do alternate action here ...\n",
@@ -285,9 +300,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -299,7 +314,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
