Updated content for 2025

--- a/notebooks/11-Modules-and-Packages.ipynb
+++ b/notebooks/11-Modules-and-Packages.ipynb
@@ -11,7 +11,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the reasons Python is so versatile is the broad ecosystem of packages that add more specialized functionality on top of vanilla Python. These include built-in modules like `math` and `os`, third party packages like `numpy` and `xarray`, and modules and packages that you've created yourself. Loosely, a module is a single .py file and a package is a collection of modules (like in the exercise to follow after lunch). In this lecture we'll explain a bit about modules and packages, why you'd want to use them and how to access them."
+    "One of the reasons Python is so versatile is the broad ecosystem of packages that add more specialized functionality on top of the core Python we've been exploring so far. \n",
+    "\n",
+    "These include built-in modules like `math` and `os`, third party packages like `numpy` and `xarray`, as well as modules and packages that you could create yourself. \n",
+    "\n",
+    "Loosely, a module is a single .py file and a package is a collection of modules (.py files). Here, we'll explain a bit about why you'd want to use them and how to access them."
    ]
   },
   {
@@ -25,22 +29,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Putting all the code for a small project in just one notebook might make sense, but what happens when your project starts getting more complicated? Say I want to do some (very complicated) ceiling division in this notebook:"
+    "Putting all the code for a small project in just one notebook might make sense, but what happens when your project starts getting more complicated? \n",
+    "\n",
+    "Say I want to do some (very complicated) ceiling division in this notebook:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "`3 // 2`  # floor division, result is 1  \n",
-    "`3 ?? 2`  # no equivalent operator for ceiling division, result would be 2"
+    "`3 // 2`  # provides floor division, result is 1  \n",
+    "`3 ?? 2`  # there is no equivalent operator for ceiling division... (result would be 2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We could define a function to do this ourselves:"
+    "We could define a function to do this ourselves, e.g.:"
    ]
   },
   {
@@ -50,10 +56,10 @@
    "outputs": [],
    "source": [
     "def ceiling_division(x, y):\n",
-    "    if (x / y) % y >= 0.5:\n",
+    "    if (x % y) > 0:\n",
     "        return x // y + 1\n",
     "    else:\n",
-    "        return x // y"
+    "        return x / y"
    ]
   },
   {
@@ -62,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ceiling_division(5, 3)"
+    "ceiling_division(3, 2)"
    ]
   },
   {
@@ -79,7 +85,7 @@
    "outputs": [],
    "source": [
     "import math\n",
-    "math.ceil(5/3)"
+    "math.ceil(3/2)"
    ]
   },
   {
@@ -88,7 +94,11 @@
    "source": [
     "### Loading Modules: the `import` Statement\n",
     "\n",
-    "To load modules Python uses the `import` statement. When you call [`import`](https://docs.python.org/3/reference/import.html), Python searches through all the places it knows to look for modules and packages (the `PATH` environment variable), runs the module or package you're importing and makes all the functions and classes in the module/package available to you."
+    "We load modules Python using the `import` statement. \n",
+    "\n",
+    "When you call [`import`](https://docs.python.org/3/reference/import.html), Python searches through all the places it knows to look for modules and packages (the `PATH` environment variable), then runs the module or package you're importing and makes all the functions and classes in the module/package available to you.\n",
+    "\n",
+    "Depending on whether you want access to a single module, or a selection from within a module or package, there are a few ways you can import into your program. "
    ]
   },
   {
@@ -123,11 +133,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check what we have imported from math? \n",
+    "# type(math.cos)\n",
+    "# type(math.pi)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "#### Exercise 1\n",
-    "Import the built in sys module and use the module's path attribute to see where Python's `import` is searching for modules, functions and classes."
+    "Import the built in `sys` module and use the module's path attribute to see where Python's `import` is searching for modules, functions and classes."
    ]
   },
   {
@@ -137,15 +158,17 @@
    "outputs": [],
    "source": [
     "# your code here\n",
-    "import sys\n",
     "\n",
-    "sys.path"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Note of Caution...\n",
+    "\n",
     "There is one other kind of import not mentioned above which is the * import. This imports everything inside a module and lets you access it without having to preface with with the module name. This is normally **very confusing** and should be avoided.  \n",
     "e.g. \n",
     "```python\n",
@@ -216,7 +239,9 @@
    "metadata": {},
    "source": [
     "The result is off by one!\n",
-    "The reason for this is that the ``import *`` statement *replaces* the built-in ``sum`` function with the ``numpy.sum`` function, which has a different call signature: in the former, we're summing ``range(5)`` starting at ``-1``; in the latter, we're summing ``range(5)`` along the last axis (indicated by ``-1``). The moral is don't use `import *` unless you have a `very good reason`."
+    "The reason for this is that the ``import *`` statement *replaces* the built-in ``sum`` function with the ``numpy.sum`` function, which has a different call signature: in the former, we're summing ``range(5)`` starting at ``-1``; in the latter, we're summing ``range(5)`` along the last axis (indicated by ``-1``). \n",
+    "\n",
+    "The moral is don't use `import *` unless you have a ***very good reason***!"
    ]
   },
   {
@@ -230,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to write larger and better organized programs, and define objects (variables, functions, classes) that you want to reuse several times, you have to create your own modules. There are a few reasons why you'd want to start creating your own modules and packages:\n",
+    "If you want to write larger and better organized programs, and define objects (variables, functions, classes) that you want to reuse several times, you can create your own modules. There are a few reasons why you'd want to start creating your own modules and packages:\n",
     "#### Readability\n",
     "Taking function and class definitions out of a 'main' script and storing them somewhere else makes the logic of your 'main' script much easier to follow. If whoever is reading the 'main' script (including you) doesn't need to see the details of how a function works, then it might make sense to put it somewhere else. This is sometimes called abstraction.\n",
     "#### Maintainability\n",
@@ -263,7 +288,7 @@
    "metadata": {},
    "source": [
     "#### Exercise 2\n",
-    "Let's create a new module called my_module.\n",
+    "Let's create a new module called `newmod`.\n",
     "```python\n",
     "# A demo module\n",
     "\n",
@@ -284,19 +309,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To do this we need to create a new file called called my_module.py (a module is just a .py file).  \n",
-    "Create my_module.py in the same folder as this notebook using Jupyter Notebook or a text editor.  \n",
-    "- In Jupyter e.g. !echo # a demo module > my_module.py  \n",
-    "- In Windows e.g. use Notepad to save a new file as 'All files' and my_module.py\n",
+    "To do this we need to create a new file called called newmod.py (a module is just a .py file).  \n",
     "\n",
-    "Copy the Python above into the file."
+    "Create newmod.py in the same folder as this notebook using Jupyter Notebook or a text editor.  \n",
+    "\n",
+    " * In Jupyter e.g. File -> New -> python file  \n",
+    " * In Windows e.g. use Notepad to save a new file as 'All files' and my_module.py\n",
+    "\n",
+    "Copy the Python code above into the file."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Suppose we want to call the `show_me_a` function from the interpreter. We could execute the file as a script, but since we just want to have access to the function `show_me_a`, we import it as a module. The syntax is as follows."
+    "Suppose we want to call the `show_me_a` function from the interpreter. We could execute the file as a script, but since we just want to have access to the function `show_me_a`, we import it as a module. \n",
+    "\n",
+    "The syntax is as follows:"
    ]
   },
   {
@@ -315,31 +344,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "dir(newmod)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import newmod\n",
-    "#dir(plt)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dir(plt)"
+    "Try adding more content to `newmod` and see if you can access within this notebook? "
    ]
   },
   {
@@ -390,11 +398,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For example, if you'd like to install a nice package to work with physical units, [``pint``](https://pint.readthedocs.io/en/0.7.2/), all that is required is to type the following at the command line:\n",
+    "For example, if you'd like to install a nice package to work with physical units, [``pint``](https://pint.readthedocs.io/en/0.7.2/), you could type the following at the command line:\n",
     "```\n",
     "$ pip install pint\n",
     "```\n",
-    "The source code for the package will be automatically downloaded from the PyPI repository, and the package installed in the standard Python path."
+    "The source code for the package will then be automatically downloaded from the PyPI repository, and the package installed in the standard Python path."
    ]
   },
   {
@@ -408,7 +416,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using pip to install packages in your standard Python path can become very messy if you need lots of different packages (as scientific Python often does). Virtual environments were developed to avoid this issue. You set up a virtual environment that you put whatever packages you want into, which is seperate from your base python and any other virtual environments you need. There are a few ways of doing this. "
+    "Using pip to install packages in your standard Python path can become very messy if you need lots of different packages (as scientific Python often does). \n",
+    "\n",
+    "Virtual environments were developed to avoid this issue. You set up a virtual environment to contain whatever packages you need. These are seperate from your base python and any other virtual environments you create. \n",
+    "\n",
+    "There are a couple of options available to do this. You will all have tried one when preparing for this course! "
    ]
   },
   {
@@ -416,7 +428,7 @@
    "metadata": {},
    "source": [
     "#### venv\n",
-    "This is a basic way of creating virtual environments that comes with Python. If you need something lightweight or can't install anything other than Python [try it](https://packaging.python.org/en/latest/tutorials/installing-packages/#creating-and-using-virtual-environments). Otherwise we recomment one of the options below.  \n"
+    "This is a basic way of creating virtual environments that comes with Python. If you need something lightweight or can't install anything other than Python, you can [try it](https://packaging.python.org/en/latest/tutorials/installing-packages/#creating-and-using-virtual-environments). Otherwise, we'd recommend using one of the options below.  \n"
    ]
   },
   {
@@ -430,26 +442,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Anaconda is the leading open data science platform powered by Python. The open source version of Anaconda is a high performance distribution of Python and R and includes over 100 of the most popular Python, R and Scala packages for data science.\n",
+    "conda is like venv in that it can create virtual environments, but it is also a package manager like pip. You can use conda to create environments *and* install packages in them. \n",
     "\n",
-    "> Additionally, you'll have access to over 720 packages that can easily be installed with conda, our renowned package, dependency and environment manager, that is included in Anaconda. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "conda is like venv in that it can create virtual environments, but it is also a package manager like pip. You can use conda to create environments *and* install packages in them. It's pretty good at finding ways of sticking all the packages you need in an environment, if a little slow about it. Anaconda is a [data science platform](https://www.anaconda.com/) that includes a Python distribution, uses conda, comes with loads of Python packages/R support and a nice graphical user interface that's easy to navigate for new starters. It is relatively huge and corporate but look how much fun the stock person in this article on their website is having."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from IPython.core.display import Image\n",
-    "Image('https://i.imgur.com/M5ulbx2.png')"
+    "The benefit also is that it's pretty good at finding ways of sticking all the packages you need together in an environment, checking for dependencies (even if it is a little slow about it). \n",
+    "\n",
+    "Anaconda is a [data science platform](https://www.anaconda.com/) that includes a Python distribution, uses conda, comes with loads of Python packages/R support and also a graphical user interface that's easy to navigate for new starters. \n",
+    "\n",
+    "**Note:** There can be [costs](https://www.anaconda.com/pricing) involved, depending on use. "
    ]
   },
   {
@@ -457,14 +456,14 @@
    "metadata": {},
    "source": [
     "#### Mamba\n",
-    "[Mamba](https://github.com/mamba-org/mamba) is a package/environment manager that works a lot like conda but faster. It's still relatively young but is quickly becoming a [FLOSS](https://en.wiktionary.org/wiki/foss) alternative to Anaconda+conda."
+    "[Mamba](https://github.com/mamba-org/mamba) is a package/environment manager that works a lot like conda but is faster. It's still relatively young but is quickly becoming a free (and more lightweight) alternative to Anaconda+conda."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# An anaconda example\n",
+    "## A simple conda example\n",
     "To make use of the excellent [interpolation tools](https://unidata.github.io/MetPy/latest/examples/gridding/Point_Interpolation.html?highlight=barnes) from the [``MetPy``](https://unidata.github.io/MetPy/latest/) meteorological library takes threee steps:\n",
     "1. Install the package on your system\n",
     "```\n",
@@ -484,6 +483,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## How to install multiple modules and packages for use in your environment? \n",
+    "\n",
+    "You've all done this already, when creating the environment for this course! \n",
+    "\n",
+    "As a reminder, you can find the instructions on how to create your environment on the course website, [here](https://ueapy.github.io/pythoncourse2025-website/installation/#13-create-the-environment). \n",
+    "\n",
+    "There are two ways you can create a new environment, either: \n",
+    "\n",
+    "1. List the modules and packages needed in your new_environment.yml file, then follow the same steps as linked above.\n",
+    "    * Note that unlike modules, the name of the environment is set *within the file*, not by the filename.\n",
+    "    * See the content of [environment.yml](../environment.yml) as an example.  \n",
+    "\n",
+    "or, if the list of modules/packages isn't too long,  \n",
+    "\n",
+    "2. Use the following to create your environment on the command line:\n",
+    "    * Using conda: `conda create -n envname <list of packages>`\n",
+    "    * Or, using mamba: `mamba create -n envname <list of packages>` \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "* *A Whirlwind Tour of Python* by Jake VanderPlas (O’Reilly). Copyright 2016 O’Reilly Media, Inc., 978-1-491-96465-1\n",
     "* [Conda: Myths and Misconceptions](https://jakevdp.github.io/blog/2016/08/25/conda-myths-and-misconceptions/)"
@@ -493,9 +517,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -507,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
