--- a/notebooks/12-Ex-Create-module.ipynb
+++ b/notebooks/12-Ex-Create-module.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Follow along: create a module and reuse code from it"
+    "# OPTIONAL EXTRA: create a module and reuse code from it"
    ]
   },
   {
@@ -211,9 +211,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -225,7 +225,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
