--- a/notebooks/10-Errors-and-exceptions.ipynb
+++ b/notebooks/10-Errors-and-exceptions.ipynb
@@ -131,7 +131,7 @@
     "        x = int(input(\"Please enter a number: \"))\n",
     "        break\n",
     "    except ValueError:\n",
-    "        print(\"Oops!  That was no a valid number.  Try again...\")"
+    "        print(\"Oops!  That was not a valid number.  Try again...\")"
    ]
   },
   {
