--- a/notebooks/15-Working-with-datetime.ipynb
+++ b/notebooks/15-Working-with-datetime.ipynb
@@ -402,6 +402,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
     "import numpy as np\n",
     "%matplotlib inline\n",
     "import matplotlib.pyplot as plt\n",
@@ -439,7 +440,7 @@
     "informat = '%Y-%m-%d %H:%M'\n",
     "\n",
     "# A list comprehension is used to generate a list of datetime objects\n",
-    "dtrecords = [datetime.strptime(item, informat ) for item in txtrecords]\n",
+    "dtrecords = [datetime.datetime.strptime(item, informat ) for item in txtrecords]\n",
     "\n",
     "\n",
     "# Alternatively, using a for loop\n",
@@ -458,7 +459,14 @@
     "\n",
     "outformat = '%d-%m-%Y %a %Ih%M %p'\n",
     "for item in dtrecords:\n",
-    "    print( datetime.strftime(item,format=outformat) )"
+    "    print( datetime.datetime.strftime(item,format=outformat) )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## "
    ]
   },
   {
@@ -471,9 +479,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -485,7 +493,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
