--- a/notebooks/16-Maps-with-Cartopy.ipynb
+++ b/notebooks/16-Maps-with-Cartopy.ipynb
@@ -260,7 +260,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = 'http://map1c.vis.earthdata.nasa.gov/wmts-geo/wmts.cgi'\n",
+    "url = 'https://map1c.vis.earthdata.nasa.gov/wmts-geo/wmts.cgi'\n",
     "fig = plt.figure(figsize=(12, 8))\n",
     "\n",
     "ax = plt.axes(projection=ccrs.PlateCarree())\n",
@@ -457,9 +457,11 @@
     "axs[1].add_feature(land_10m)\n",
     "\n",
     "from cartopy.io import shapereader\n",
-    "shp = shapereader.Reader('../data/coasts/hidf_land.shp')\n",
-    "for record, geometry in zip(shp.records(), shp.geometries()):\n",
-    "    axs[2].add_geometries([geometry], ccrs.PlateCarree(), facecolor='lightgreen', edgecolor='black', linewidth=0.1)\n",
+    "fname = '../data/coasts/hidf_land.shp'\n",
+    "\n",
+    "axs[2].add_geometries(shapereader.Reader(fname).geometries(),\n",
+    "                  ccrs.PlateCarree(),\n",
+    "                  facecolor='lightgreen', edgecolor='black', linewidth=0.1)\n",
     "\n",
     "axs[0].set_title(\"1:50 milion coastline\")\n",
     "axs[1].set_title(\"1:10 million coastline\")\n",
@@ -468,8 +470,8 @@
     "for ax in axs:\n",
     "    gl = ax.gridlines(draw_labels=False)\n",
     "    ax.set_extent([-6.3, -5.4, 56, 57], crs=ccrs.PlateCarree());\n",
-    "    \n",
-    "plt.savefig('../figures/scot_coast.png')"
+    "\n",
+    "#plt.savefig('../figures/scot_coast.png')"
    ]
   },
   {
@@ -486,9 +488,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:course2025] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-course2025-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -500,7 +502,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
